--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled class file
+/bin/
 *.class
 
 # Log file
@@ -22,6 +23,6 @@
 hs_err_pid*
 
 # IDE Files #
-/bin/
+/.settings/
 /.project
 /.classpath
